src/objects/History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMUser</label>
        <referenceTo>EMUser__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Histories</relationshipLabel>
        <relationshipName>Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>